# phi4pipeline

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  pyproject.toml
src/phi4pipeline/: __about__.py  __main__.py  clean.py  cli.py  frictionless.py  load.py  release.py  validate.py
src/phi4pipeline/metadata/: datapackage_template.json  description_template.md  phi-base_schema.json  readme_template.md
tests/: test_clean.py  test_cli.py  test_frictionless.py  test_load.py
tests/data/: contributors.csv  datapackage_expected.json  description_expected.html  phi-base_v4-12_cleaned.csv  phi-base_v4-12_test.csv  phi-base_v4-12_test.fas  readme_expected.html  readme_expected.md
